<resources>
    <string name="app_name">ILJIN DIA</string>
    <string name="languageName01">Việt Nam</string>
    <string name="languageName02">한국어</string>
    <string name="languageName03">English</string>
    <string name="FONT_NANUM_SQUARE_OTFB">NanumSquareOTFB.otf</string>
    <string name="FONT_NANUM_SQUARE_OTFR">NanumSquareOTFR.otf</string>
    <string name="FONT_NOTO_SANS_KR_BOLD">NotoSansKR-Bold-Hestia.otf</string>
    <string name="FONT_NOTO_SANS_KR_REG">NotoSansKR-Regular-Hestia.otf</string>
    <string name="debug_title">Debuging log</string>
    <string name="main_title">ILJIN DIA</string>
    <string name="exit_message">if you want close this program press the back button one more time.</string>
    <string name="login_btn_name">Login</string>
    <string name="logout_btn_name">Logout</string>
    <string name="alert_message_type_login_01">Please input login ID.</string>
    <string name="alert_message_type_logout_01">Do you want logout the program?</string>
    <string name="alert_message_input_timeout_01">You can only enter the number of seconds in time out.</string>
    <string name="alert_message_input_timeout_02">The time out value must be at least %d seconds.</string>
    <string name="alert_message_no_user">User is not exists.</string>
    <string name="alert_message_no_list">No listings.</string>
    <string name="alert_message_no_data">No Data.</string>
    <string name="alert_message_no_object">No list.</string>
    <string name="alert_message_no_process_lot">There is a LOT that cannot be processed.</string>
    <string name="alert_message_no_loss_object">No Loss object.</string>
    <string name="alert_message_no_lot_id">No lot id.</string>
    <string name="alert_message_no_inv_lot_id">No inv lot id.</string>
    <string name="alert_message_no_to_inv_lot_id">No to inv lot id.</string>
    <string name="alert_message_no_from_inv_lot_id">No from inv lot id.</string>
    <string name="alert_message_no_hold_code">No hold code.</string>
    <string name="alert_message_no_release_code">No release code.</string>
    <string name="alert_message_no_out_type">No out type.</string>
    <string name="alert_message_no_out_qty">Please Check Out Qty.</string>
    <string name="alert_message_no_out_date">No out date.</string>
    <string name="alert_message_clear">Do you want to initialize?</string>
    <string name="alert_message_delete">Are you sure you want to delete?</string>
    <string name="alert_message_move">Are you sure you want to move?</string>
    <string name="alert_message_delivery_empty">Please scan the delivery document.</string>
    <string name="alert_message_location_empty">Please scan the location.</string>
    <string name="alert_message_select_empty">No barcode selected.</string>
    <string name="alert_message_select_req_no_empty">No req no selected.</string>
    <string name="alert_message_out_oper_empty">Out Oper no selected.</string>
    <string name="alert_message_move_oper_empty">Move Oper no selected.</string>
    <string name="alert_message_vsm_empty">Please select VSM line.</string>
    <string name="alert_message_lot_empty">Please scan lot id.</string>
    <string name="alert_message_no_hm">No hm area.</string>
    <string name="alert_message_lot_qty_over">There cannot be more LOT quantity than requested quantity-registered quantity.</string>
    <string name="alert_message_location_barcode_error">No location information.</string>
    <string name="alert_message_load">Do you want to load it?</string>
    <string name="alert_message_load_success">Loading is complete.</string>
    <string name="alert_message_error_not_same_area">The area of LOT is not the same as the search condition.</string>
    <string name="alert_message_error_not_same_sub_area">The sub area of LOT is not the same as the search condition.</string>
    <string name="alert_message_error_not_same_oper">The oper of LOT is not the same as the search condition.</string>
    <string name="alert_message_error_release">This is an order that can not be shipped out.</string>
    <string name="alert_message_error_req_number">This is an instruction number that can not be dispensed.</string>
    <string name="alert_message_error_duplicate">This label is already registered.</string>
    <string name="alert_message_error_duplicate_oper">Out oper and Move oper cannot be the same.</string>
    <string name="alert_message_error_not_in_list">It is not a label in the list.</string>
    <string name="alert_message_error_enter_quantity">Please enter the quantity.</string>
    <string name="alert_message_error_new_update">There is a new update. Please update and run again.</string>
    <string name="alert_message_oper_empty">Please select the arrival warehouse.</string>
    <string name="alert_message_empty_out_quantity_value">[ISSUE QTY] is 0</string>
    <string name="alert_message_overflow_out_quantity_value">delivery quantity have exceeded the current quantity.</string>
    <string name="alert_message_input_value_validation_01">Only numbers can be entered. Include \'+\', \'-\'.</string>
    <string name="alert_message_input_value_validation_02">\'+\', \'-\' Must be placed before the number.</string>
    <string name="alert_message_invalid_label">No label information.</string>
    <string name="alert_message_ask_in">Would you process to in?</string>
    <string name="alert_message_ask_release">Would you process to issue?</string>
    <string name="alert_message_not_select_account">There are no selected goods issue accounts.</string>
    <string name="screen_name_settings">Settings</string>
    <string name="setting_menu_name_01">Server</string>
    <string name="setting_menu_name_02">Login Factory</string>
    <string name="setting_menu_name_03">TimeOut</string>
    <string name="setting_menu_name_04">Language</string>
    <string name="processing_completed">COMPLETE</string>
    <string name="complete">COMPLETE</string>
    <string name="delete">DEL</string>
    <string name="okay">OK</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="select">Slect</string>
    <string name="close">Close</string>
    <string name="sec">sec</string>
    <string name="box">Box</string>
    <string name="count">EA</string>
    <string name="version">Version</string>
    <string name="version_info">Version</string>
    <string name="current_version">Current Version</string>
    <string name="new_version">Latest Version</string>
    <string name="settings">Settings</string>
    <string name="common_word_number">NO</string>
    <string name="common_word_line">LINE</string>
    <string name="common_word_osp_oper">(OSP) TO OPER</string>
    <string name="common_word_machine">MACHINE</string>
    <string name="common_word_no_run">NO RUN</string>
    <string name="common_word_down">DOWN</string>
    <string name="common_word_most_down">MOST DOWN</string>
    <string name="common_word_request_date">REQ DATE</string>
    <string name="common_word_request_seq">REQ INV SEQ</string>
    <string name="common_word_model_number">ITEM CD</string>
    <string name="common_word_style">STYLE</string>
    <string name="common_word_required_quantity">NEED QTY</string>
    <string name="common_word_work_quantity">WORK QTY</string>
    <string name="common_word_good">GOOD</string>
    <string name="common_word_loss">LOSS</string>
    <string name="common_word_good_loss">GOOD/LOSS</string>
    <string name="common_word_quantity_left">REMAIN QTY</string>
    <string name="common_word_barcode">BARCODE</string>
    <string name="common_word_remark">REMARK</string>
    <string name="common_word_inv_lot_id">INV LOT ID</string>
    <string name="common_word_lot_id_1">LOT 1</string>
    <string name="common_word_lot_id_2">LOT 2</string>
    <string name="common_word_to_inv_lot_id">TO INV LOT ID</string>
    <string name="common_word_from_inv_lot_id">FROM INV LOT ID</string>
    <string name="common_word_dlv_lot_id">DLV LOT ID</string>
    <string name="common_word_lot_id">LOT ID</string>
    <string name="common_word_res_id">RESOURCE CODE</string>
    <string name="common_word_res_name">RESOURCE NAME</string>
    <string name="common_word_process_lot_id">PROCESS LOT ID</string>
    <string name="common_word_ship_lot_id">SHIP LOT ID</string>
    <string name="common_word_middle_box_id">MIDDLE BOX ID</string>
    <string name="common_word_final_box_id">FINAL BOX ID</string>
    <string name="common_word_loss_code">LOSS CODE</string>
    <string name="common_word_loss_desc">LOSS DESC</string>
    <string name="common_word_loss_qty">LOSS QTY</string>
    <string name="common_word_label">LABEL</string>
    <string name="common_word_dlv_no">DLV NO</string>
    <string name="common_word_dlv_seq">DLV SEQ</string>
    <string name="common_word_request_no">REQUEST NO</string>
    <string name="common_word_request_id">REQUEST ID</string>
    <string name="common_word_model_name">ITEM NM</string>
    <string name="common_word_quantity">QTY</string>
    <string name="common_word_reg_quantity">REG QTY</string>
    <string name="common_word_etc_out_quantity">OUT QTY</string>
    <string name="common_word_confirm_quantity">CONFIRM QTY</string>
    <string name="common_word_processing">PROCESSING</string>
    <string name="common_word_run">RUN</string>
    <string name="common_word_regist">REGIST</string>
    <string name="common_word_cancel">CANCEL</string>
    <string name="common_word_search">SEARCH</string>
    <string name="common_word_start">START</string>
    <string name="common_word_end">END</string>
    <string name="common_word_delete">DELETE</string>
    <string name="common_word_take">RECEIPT</string>
    <string name="common_word_deny">REJECT</string>
    <string name="common_word_initioalization">INIT</string>
    <string name="common_word_match">MATCH</string>
    <string name="common_word_close">CLOSE</string>
    <string name="common_word_all">ALL</string>
    <string name="common_word_unall">UNALL</string>
    <string name="common_word_release">ISSUE</string>
    <string name="common_word_return">RETURN</string>
    <string name="common_word_move">MOVE</string>
    <string name="common_word_carry_in">CARRY-IN</string>
    <string name="common_word_scan_info">SCAN INFO</string>
    <string name="common_word_location">LOCATION</string>
    <string name="common_word_load">LOAD</string>
    <string name="common_word_transfer">TRANSFER</string>
    <string name="common_word_kitting">KITTING</string>
    <string name="common_word_warehousing">IN</string>
    <string name="common_word_warehousing_factory">IN FACTORY</string>
    <string name="common_word_iqc_id">IQC ID</string>
    <string name="common_word_line_name">PLANT</string>
    <string name="common_word_iqc_result">IQC RESULT</string>
    <string name="common_word_iqc_time">IQC TIME</string>
    <string name="common_word_iqc_worker">IQC WOKRER</string>
    <string name="common_word_worker">WORKER</string>
    <string name="common_word_work_shift">WORK SHIFT</string>
    <string name="common_word_factory">FACTORY</string>
    <string name="common_word_area">AREA</string>
    <string name="common_word_oper">OPER</string>
    <string name="common_word_move_id">MOVE ID</string>
    <string name="common_word_move_oper">MOVE OPER</string>
    <string name="common_word_cause_oper">CAUSE OPER</string>
    <string name="common_word_warehouse">STOCK</string>
    <string name="common_word_warehouse_desc">STOCK DESC</string>
    <string name="common_word_scan_quantity">SCAN QTY</string>
    <string name="common_word_forwarding_account">ISSUE ACCOUNT</string>
    <string name="app_info">App Info</string>
    <string name="menu_group">MENU GROUP</string>
    <string name="production_menu">PRODUCTION MENU</string>
    <string name="inv_menu">INV MENU</string>
    <string name="shp_menu">SHP MENU</string>
    <string name="book_mark_menu">BOOKMARK</string>
</resources>